[package]
name = "simple_google"
version = "0.1.0"
edition = "2024"
description = "A search tool that bypasses Google's CAPTCHA verification"
license = "MIT"
repository = "https://github.com/LeeeSe/simple_google"
homepage = "https://github.com/LeeeSe/simple_google"

[[bin]]
name = "simple_google"
path = "src/main.rs"

[lib]
name = "simple_google"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.44", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
scraper = "0.23.1"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
